public/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "Nunito";
    color: #d3cccc;
}

:root {
    --transition-time: 0.4s;
}

::-webkit-scrollbar {
    width: 11px;
}

::-webkit-scrollbar-track {
    background-color: #4100a8;
}

::-webkit-scrollbar-thumb {
    background-color: #d3cccc;
    border-radius: 20px;
    border: 2px solid #4100a8;
}

.app {
    background-image: linear-gradient(130deg, #050225, #0c035c, #4100a8, #4907b3);

    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 15px 55px;
        background-color: rgba(255, 255, 255, 0.1);
        backdrop-filter: blur(20px);
        box-shadow: 0px 2px 7px -2px #000000;

        .left-side {
            display: flex;
            flex-direction: column;

            h2 {
                font-size: 1.35em;
            }

            .autor {
                font-size: 0.8em;
                margin-top: -3px;
                padding-bottom: 4px;
            }
        }

        .right-side {
            display: flex;
            justify-content: center;
            align-items: center;
            gap: 20px;
            font-size: 0.9em;

            .repo {
                border-bottom: 1.5px solid transparent;
                transition: border-color ease-in-out var(--transition-time);

                &:hover {
                    border-color: #d3cccc;
                }
            }
        }
    }

    main {
        height: 100vh;
        display: flex;
        justify-content: center;
        align-items: center;

        .container-phrase {
            position: relative;
            width: 75%;
            height: 25%;
            min-height: 160px;
            display: flex;
            justify-content: space-between;
            align-items: center;
            flex-direction: column;

            .content-phrase {
                width: 70%;
                display: flex;
                flex-direction: column;
                justify-content: center;
                align-items: center;

                .phrase {
                    position: relative;
                    display: flex;
                    flex-direction: column;
                    gap: 5px;
                    width: 100%;
                    padding-top: 10px;
                    transition: all ease-in-out var(--transition-time);

                    .text {
                        width: 100%;
                        transition: all ease-in-out var(--transition-time);
                        font-size: 1.5em;
                        text-align: center;
                        opacity: 0;
                    }

                    .translation {
                        cursor: pointer;
                        position: absolute;
                        display: flex;
                        justify-content: center;
                        right: 0;
                        top: 0;
                        margin-top: -35px;
                        margin-right: -35px;
                        background-color: transparent;
                        border: 1px solid #d3cccc;
                        padding: 5px;
                        border-radius: 50%;
                        box-shadow: 2px 2px 3px -1px #000;
                        transition: all ease-in-out var(--transition-time);
        
                        svg {
                            transition: all ease-in-out var(--transition-time);
                        }
        
                        &:hover {
                            box-shadow: 1px 1px 5px -2px #fff;
                            background-color: #d3cccc;
                            
                            svg {
                                stroke: #4907b3;
                            }
                        }
                    }
                }
            }

            .process-container {
                position: relative;
                margin: 0 auto;
                margin-top: 25px;
                margin-bottom: 25px;
                width: 100%;
                height: 2px;

                .process {
                    height: 100%;
                    border-radius: 2px;
                    background-color: #d3cccc;
                    transition: all linear 0.05s;
                }
            }

            .controls {
                cursor: default;

                p {
                    display: flex;
                    justify-content: center;
                    align-items: center;
                    gap: 5px;
                    padding: 7px 14px;
                    border: 1px solid #d3cccc;
                    border-radius: 4px;
                    transition: all ease-in-out var(--transition-time);

                    svg {
                        transition: all ease-in-out var(--transition-time);
                    }
                }

                &:has(.pc-content) {
                    p:hover {
                        background-color: #d3cccc;
                        color: #4907b3;
                        box-shadow: 1px 1px 6px -2px #d3cccc;
    
                        svg {
                            stroke: #4907b3;
                        }
                    }
                }
            }
        }
    }

    footer {
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 15px 0px;

        span {
            display: flex;
            justify-content: center;
            align-items: center;
            gap: 5px;

            svg {
                width: 18px;
                height: 18px;
                fill: red;
            }
        }
    }
}

.show {
    opacity: 1 !important;
}

@media screen and (max-width: 640px) {
    .container-phrase {
        width: 100% !important;
    }
}

